<resources>
    <string name="app_name">Books</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">Books</string>
    <string name="favoritesBtn">Favorieten</string>
    <string name="searchBtn">Boek zoeken</string>
    <string name="readBtn">Gelezen boeken</string>
    <string name="waitList">Wachtrij</string>
    <string name="searchButton">Zoek</string>
    <string name="searchHint">Zoek een titel of auteur</string>
    <string name="descriptionLabel">Beschrijving</string>
    <string name="authorsLabel">Authors</string>
    <string name="show_all">Alles</string>
    <string name="show_ebooks">E-boeken</string>
    <string name="show_free_ebooks">Gratis e-boeken</string>
    <string name="aboutMenuItem">Over</string>
    <string name="aboutText">Books is een applicatie waarbij je je favoriete boeken kan toevoegen aan verschillende lijsten.\nJe kan in elke lijst je boek ook raadplegen waarbij je details van je boek kan bekijken.</string>
    <string name="searchBookTitle">Zoek een boek</string>
    <string name="emptyFavoritesList">Je hebt nog geen boeken in deze lijst</string>
    <string name="favoritesTitle">Favorieten</string>
    <string name="emptyToReadList">Nog geen boeken in deze lijst</string>
    <string name="toReadButtonText">Boek in wachtrij</string>
    <string name="finishedButtonText">Niet in \"Gelezen\" lijst</string>
    <string name="finishedBooksTitle">Gelezen boeken</string>
    <string name="toReadTitle">wachtrij</string>
    <string name="addInFavroites">Voeg toe aan favorieten</string>
    <string name="authorLabel">Geschreven door:</string>
    <string name="addInFinished">Boek gelezen</string>
    <string name="added_to_finished_books">Toegevoegd aan gelezen boeken</string>
    <string name="removed_from_finished_books">Verwijderd uit gelezen boeken</string>
    <string name="added_to_read_books">Toegevoegd aan wachtrij</string>
    <string name="removed_to_read_books">Verwijderd uit wachtrij</string>
    <string name="moreText">Meer weergeven</string>
    <string name="lessText">Minder weergeven</string>
    <string name="no_description_found">Geen beschrijving van dit boek gevonden</string>
    <string name="cd_remove_button">This is the remove button</string>
    <string name="cd_loading_image">This is the loading image</string>
    <string name="cd_cover_image">This is the cover of the book</string>
    <string name="cd_statusImage">This is the status image</string>
    <string name="yourBooksMenuItem">Jouw boeken</string>
    <string name="error_apiStatusText">Er is iets mis gelopen, probeer opnieuw</string>
    <string name="empty_apiStatusText">Welkom bij Books!</string>
    <string name="favoriteBooks_label">Favoriete boeken</string>
    <string name="favoriteBooksList_button">Favorieten</string>
    <string name="toReadBooksList_button">Wachtrij</string>
    <string name="finishedBooksList_button">Gelezen boeken</string>
    <string name="toReadBooks_label">Boeken in wachtlijst</string>
    <string name="search_icon">Dit is de zoek naar een boek icon</string>
    <string name="finishedBooks_label">Gelezen boeken</string>

</resources>
