<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.example.books.domain.models.Book" />

        <variable
            name="clickListener"
            type="com.example.books.domain.bookSearch.BooksAdapter.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/listItem_constrainLayout"
        android:onClick="@{() -> clickListener.onClick(book, `details`)}">

        <ImageView
            android:id="@+id/thumbnail"
            style="@style/searchListCover_image"
            android:contentDescription="@string/cd_cover_image"
            app:imageUrl="@{book.volumeInfo.imageLinks.thumbnail}"
            app:layout_constraintBottom_toTopOf="@+id/FinishedButton"
            app:layout_constraintEnd_toStartOf="@+id/FinishedButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleText"
            style="@style/searchListTitle_text"
            android:text="@{book.volumeInfo.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorLabel"
            style="@style/searchListAuthor_label"
            android:text="@string/authorLabel"
            app:layout_constraintStart_toEndOf="@+id/thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <TextView
            android:id="@+id/authors_text"
            style="@style/searchListAuthor_text"
            app:authors="@{book.volumeInfo.authors}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/authorLabel" />

        <Button
            android:id="@+id/toReadButton"
            style="@style/searchList_button"
            android:onClick="@{() -> clickListener.onClick(book, `insertFavorites`)}"
            android:text="@string/toReadButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/FinishedButton"
            app:layout_constraintTop_toBottomOf="@+id/authors_text" />

        <Button
            android:id="@+id/FinishedButton"
            style="@style/searchList_button"
            android:onClick="@{() -> clickListener.onClick(book, `insertFinished`)}"
            android:text="@string/addInFinished"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toReadButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authors_text" />

        <View
            android:id="@+id/list_divider"
            style="@style/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FinishedButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

